<resources>
    <string name="app_name">ТОП—РАДИО</string>
    <string name="menu_home">Все радиостанции</string>
    <string name="menu_genres">Жанры</string>
    <string name="menu_cities">Города</string>
    <string name="menu_viewed">Просмотренные</string>
    <string name="menu_records">Записи</string>
    <string name="search">Поиск…</string>
    <string name="favorites">Избранное</string>
    <string name="copied">Скопировано</string>
    <string name="start_record">Запись началась</string>
    <string name="stop_record">Запись завершена</string>
    <string name="stop_record_info">Запись успешно завершена, для прослушивания откройте в файловом менеджере папку:</string>
    <string name="stop_record_info2">или перейдите в Записи</string>
    <string name="open">Перейти</string>
    <string name="close">Закрыть</string>
    <string name="menu_alarm">Установить будильник</string>
    <string name="menu_add_station">Предложить радиостанцию</string>
    <string name="menu_feedback">Оставить отзыв</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_exit">Выход</string>
    <string name="theme">Тёмная тема</string>
    <string name="auto_play">Автовоспроизведение</string>
    <string name="headphone">Пауза при отключении гарнитуры</string>
    <string name="reconnect">Переподключаться</string>
    <string name="timer">Таймер сна</string>
    <string name="buffer">Размер буфера</string>
    <string name="ms">мс</string>
    <string name="sec">сек</string>
    <string name="min">мин</string>
    <string name="hour">ч</string>
    <string name="off">выключен</string>
    <string name="playlist">Плей-лист</string>
    <string name="top100">ТОП 100</string>
    <string name="station">Радиостанция</string>
    <string name="time">Время</string>
    <string name="repeat">Повтор</string>
    <string name="repeat_times">Частота повторений</string>
    <string name="volume_slide">Плавное увеличение громкости</string>
    <string name="view_type">Тип отображения</string>
    <string name="list">Список</string>
    <string name="grid">Сетка</string>
    <string name="alarm">Будильник</string>
    <string name="alarm_on">Будильник включен</string>
    <string name="date">Дата</string>
    <string name="alarm_wrong_time">Время будильника установлено неверно!</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="internet_info">Подключите Wi-Fi соединение или мобильный интернет для прослушивания радиостанций</string>
    <string name="station_off">Эта станция сейчас недоступна</string>

</resources>