<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_menu">
        <TextView
            android:id="@+id/menu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/stations_list"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/menu_alarm"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/stations_list"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/menu_add_station"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/menu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/stations_list"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/menu_feedback"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/menu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/stations_list"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/menu_settings"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/menu5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/stations_list"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/menu_exit"/>
    </LinearLayout>
</layout>
