<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.app.topradio.model.AlarmViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp">
                <ImageView
                    android:id="@+id/alarmIcon"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.07"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alarm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@id/alarmIcon"
                    app:layout_constraintEnd_toStartOf="@id/switchAlarm"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="15sp"
                        android:text="@string/alarm_on"
                        android:textColor="@color/stations_list"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:background="@android:color/transparent"
                    android:id="@+id/switchAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:track="@drawable/switch_settings"
                    android:thumb="@drawable/switch_thumb"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:layout_marginTop="21dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarmDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <ImageView
                    android:id="@+id/dateIcon"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.07"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@id/dateIcon"
                    app:layout_constraintEnd_toStartOf="@id/arrowDate"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="15sp"
                        android:text="@string/date"
                        android:textColor="@color/stations_list"/>
                    <TextView
                        android:id="@+id/dateValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:textSize="14sp"
                        setDate="@{viewModel.date}"
                        android:textColor="@color/setting_subtitle"/>
                </LinearLayout>
                <ImageView
                    android:background="@android:color/transparent"
                    android:id="@+id/arrowDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_arrow_right2"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>
            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:timePickerMode="spinner"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="15sp"
                        android:text="@string/repeat"
                        android:textColor="@color/stations_list"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        app:spanCount="7"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarmStation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp">
                <ImageView
                    android:id="@+id/stationIcon"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.07"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_radio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@id/stationIcon"
                    app:layout_constraintEnd_toStartOf="@id/arrowStation"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="15sp"
                        android:text="@string/station"
                        android:textColor="@color/stations_list"/>
                    <TextView
                        android:id="@+id/stationValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:textSize="14sp"
                        android:textColor="@color/setting_subtitle"/>
                </LinearLayout>
                <ImageView
                    android:background="@android:color/transparent"
                    android:id="@+id/arrowStation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_arrow_right2"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp">
                <ImageView
                    android:id="@+id/volumeIcon"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.07"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_volume_slide"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@id/volumeIcon"
                    app:layout_constraintEnd_toStartOf="@id/switchVolume"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="15sp"
                        android:text="@string/volume_slide"
                        android:textColor="@color/stations_list"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:background="@android:color/transparent"
                    android:id="@+id/switchVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:track="@drawable/switch_settings"
                    android:thumb="@drawable/switch_thumb"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>
        </LinearLayout>

    </ScrollView>
</layout>